kube-system/ingress/traefik/base/traefik-middleware-basic-auth.yaml
#
#  Author: Patrick LUZOLO
#  Date: 2025-05-22 13:47:33 +0000 (Tue, 22 May 2025)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/eldorplus/k8s-homelab
#  License: see accompanying Patrick LUZOLO LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/in/patrickluzolo/
#
# ============================================================================ #
#                      T r a e f i k   M i d d l e w a r e
# ============================================================================ #

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-auth  # XXX: Edit
spec:
  basicAuth:
    # htpasswd -nBb someuser somepass > auth
    # kubectl create secret generic htpasswd-secret --from-file=auth
    secret: htpasswd-secret  # XXX: Edit
