kube-system/ingress/traefik/base/traefik-middleware-security.yaml
#
#  Author: Patrick LUZOLO
#  Date: 2025-05-22 13:47:33 +0000 (Tue, 22 May 2025)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/eldorplus/k8s-homelab
#  License: see accompanying Patrick LUZOLO LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/in/patrickluzolo/
#
# ============================================================================ #
#                      T r a e f i k   M i d d l e w a r e
# ============================================================================ #

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security
spec:
  headers:
    frameDeny: true               # the page can not be loaded in an iframe, Set frameDeny to true to add the X-Frame-Options header with the value of DENY.
    sslRedirect: true             # The sslRedirect only allow HTTPS requests when set to true.
    browserXssFilter: true        # Limit XSS, Set browserXssFilter to true to add the X-XSS-Protection header with the value 1; mode=block.
    contentTypeNosniff: true      # Do not detect Mime type by browser, Set contentTypeNosniff to true to add the X-Content-Type-Options header with the value nosniff.
    # HSTS HTTP Strict Transport Security
    stsIncludeSubdomains: true    # If the stsIncludeSubdomains is set to true, the includeSubDomains directive is appended to the Strict-Transport-Security header. all subdomains have to HSTS complained
    stsPreload: true              # https://hstspreload.org/
    stsSeconds: 31536000          #  To be able to use HSTS Preloading, this parameter must be at least 31536000 second
