kube-system/ingress/traefik/base/traefik-dashboard-service.yaml
#
#  Author: Patrick LUZOLO
#  Date: 2025-05-22 13:47:33 +0000 (Tue, 22 May 2025)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/eldorplus/k8s-homelab
#  License: see accompanying Patrick LUZOLO LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/in/patrickluzolo/
#
# ============================================================================ #
#               T r a e f i k   D a s h b o a r d   S e r v i c e
# ============================================================================ #

# Used to expose metrics to Prometheus or to make it easier to kubectl port-forward:
#
#     kubectl port-forward -n traefik svc/traefik-dashboard 9000:9000
#
# instead of:
#
#     kubectl port-forward -n traefik $(kubectl get pods -n traefik --selector "app.kubernetes.io/name=traefik" --output=name) 9000:9000
#       or
#     kubectl port-forward -n traefik deploy/traefik 9000:9000
#
# Makefile:
#
#     TUNNEL_CMD := kubectl port-forward -n traefik svc/traefik-dashboard 9000:9000
#
#     default: tunnel
#             sleep 2
#             # dashboard requires trailing slash / to work
#             open http://localhost:9000/dashboard/
#
#     tunnel:
#             pkill -f '$(TUNNEL_CMD)' || :
#             $(TUNNEL_CMD) &

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: traefik
  labels:
    app.kubernetes.io/instance: traefik-traefik  # doubled up because of helm kustomize name
    app.kubernetes.io/name: traefik-dashboard
spec:
  type: ClusterIP
  selector: # Select the pod container with app=treafik to communicate with CusrerIP inside the container
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      name: metrics
      port: 9100
      targetPort: 9100
      #targetPort: traefik  # Traefik doesn't determine the port this way
    - protocol: TCP
      name: web
      port: 80
    - protocol: TCP
      name: websecure
      port: 443
    - protocol: TCP
      name: traefik
      port: 8080
