kube-system/ingress/traefik/base/traefik-dashboard-ingressroute-http-redirect.yaml
#
#  Author: Patrick LUZOLO
#  Date: 2025-05-22 13:47:33 +0000 (Tue, 22 May 2025)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/eldorplus/k8s-homelab
#  License: see accompanying Patrick LUZOLO LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/in/patrickluzolo/
#

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-http
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: Host("traefik.DOMAIN.COM")  # XXX: Edit
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: redirect-https
