kube-system/ingress/traefik/base/traefik-dashboard-ingressroute.yaml
#
#  Author: Patrick LUZOLO
#  Date: 2025-05-22 13:47:33 +0000 (Tue, 22 May 2025)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/eldorplus/k8s-homelab
#  License: see accompanying Patrick LUZOLO LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/in/patrickluzolo/
#

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-tls  # must differentiate it from the default traefik-dashboard ingress created by Helm which is needed to route to api@internal
spec:
  entryPoints:
    - websecure
  routes:
    # Gets '404 page not found'
    #- match: Host(`traefik.DOMAIN.COM`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    #  kind: Rule
    #  services:
    #    - name: api@internal
    #      kind: TraefikService
    - kind: Rule
      match: Host("traefik.DOMAIN.COM")  # XXX: Edit
      services:
        - name: traefik-dashboard
          port: 9000
      middlewares:
        - name: dashboard-basic-auth  # doesn't require namespace prefix unlike regular ingress annotations
        - name: dashboard-add-prefix
    - kind: Rule
      match: Host("traefik.DOMAIN.COM") && PathPrefix("/api")  # XXX: Edit domain
      services:
        - name: traefik-dashboard
          port: 9000
      middlewares:
        - name: dashboard-basic-auth
  tls:
    secretName: traefik-dashboard-tls
  # XXX: doesn't work with more than 1 pod - requires Enterprise Edition :-(
  #      also must configure letsencrypt for Traefik specifically in values.yaml instead of just riding Cert Manager like with regular ingresses
  #      create Cert Manager certificate request separately instead and point it to the secret
  #  certResolver: letsencrypt
