kube-system/ingress/traefik/base/traefik-ingressroute.yaml
#
#  Author: Patrick LUZOLO
#  Date: 2025-05-22 13:47:33 +0000 (Tue, 22 May 2025)
#
#  vim:ts=2:sts=2:sw=2:et
#  lint: k8s
#
#  https://github.com/eldorplus/k8s-homelab
#  License: see accompanying Patrick LUZOLO LICENSE file
#
#  If you're using my code you're welcome to connect with me on LinkedIn
#  and optionally send me feedback to help improve or steer this or other code I publish
#
#  https://www.linkedin.com/in/patrickluzolo/
#

# ============================================================================ #
#                   T r a e f i k   I n g r e s s   R o u t e
# ============================================================================ #

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: NAME
spec:
  entryPoints:
    - websecure
  routes:
    # See available matchers here:
    #
    #     https://doc.traefik.io/traefik/routing/routers/#rule
    #
    - kind: Rule
      match: Host(`NAME.DOMAIN.COM`) && PathPrefix(`/dashboard`) || PathPrefix(`/api`)  # XXX: Edit
      services:
        # XXX: Edit - pick one
        - kind: TraefikService
          name: api@internal
        - kind: Service
          name: whoamiv1
          namespace: app
          port: 80
        - kind: Service
          name: whoamiv2
          namespace: app
          port: 80
      middlewares:
        - name: default-test-auth@kubernetescrd
  tls:
    certResolver: letsencrypt
    domains:
      - main: www.domain.com  # XXX: Edit
        sans:
          - www2.domain.com  # XXX: Edit
    options:
      name: tlsoptions
